# jtab

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  jreleaser.yml
.github/workflows/: build.yml
Formula/: jtab.rb
ci/: before_deploy.sh
src/: main.rs  printer.rs  reader.rs  table.rs
src/reader/: csv.rs  mod.rs
