[package]
name = "jtab"
version = "0.1.0"
authors = ["wlezzar <walid.lezzar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
serde_json = "1.0"
prettytable-rs = "^0.8"
yaml-rust = "0.4"
term = "0.5.2"
regex = "1"