[package]
name = "jtab"
version = "0.5.1"
authors = ["wlezzar <walid.lezzar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
serde_json = { version = "1.0", features = ["preserve_order"] }
prettytable-rs = "0.9.0"
yaml-rust = "0.4"
term = "0.7.0"
regex = "1.6.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
csv = "1.1.6"
